# self-critique-ai-writer-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: self-critique_large_language_models_creative_writing_story_generation_20260323_081411.jsonl  self-refinement_self-reward_LLM_reinforcement_learning_text_generation_without_h_20260323_081658.jsonl  self-rewarding_language_model_self-play_iterative_refinement_writing_quality_20260323_082103.jsonl
papers/: README.md
papers/pages/: 2303.17651_self_refine_manifest.txt  2401.10020_self_rewarding_language_models_manifest.txt  2410.02428_collective_critics_story_gen_manifest.txt  2506.00103_writing_zero_manifest.txt
results/: analysis.json  full_results.json  generations.json
src/: analyze.py  experiment.py
